# diagfig

./: LICENSE  README.md  pyproject.toml
example/: example_1.py  example_1_bis.py  example_2.py  example_3.py  example_color_cube.py  example_color_cube_plotly.py
src/diagfig/: __init__.py  colour_config.py  figure_diagnosis.py  helpers.py  utils.py
tests/: test_figure_diagnosis.py  test_helpers.py
